syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message bigSecretCompetitionSync_toS {}

message bigSecretCompetitionSync_toC {
    optional int64 beginTime = 1;
    optional int64 endTime   = 2;
    optional int32 rankID    = 3;
    optional int32 config    = 4; // 当前赛季使用的配置ID
}